Change getIndirectPassengers to an overload of getPassengers